--- a/templates/default/robohome.xyz/robohome.xyz.erb
+++ b/templates/default/robohome.xyz/robohome.xyz.erb
@@ -1,18 +1,20 @@
+#server {
+#	 listen 80 default_server;
+#	 listen [::]:80 default_server;
+#	 server_name robohome.xyz www.robohome.xyz;
+#	 return 301 https://$server_name$request_uri;
+#}
+
 server {
 	listen 80 default_server;
-	listen [::]:80 default_server;
-    server_name robohome.xyz www.robohome.xyz;
-    return 301 https://$server_name$request_uri;
-}
+    listen [::]:80 default_server;
+	# listen 443 ssl default_server;
+	# listen [::]:443 ssl default_server;
 
-server {
-    listen 443 ssl default_server;
-	listen [::]:443 ssl default_server;
+	# include snippets/ssl-params-robohome.xyz.conf;
 
-	include snippets/ssl-params-robohome.xyz.conf;
-
-    ssl_certificate /etc/letsencrypt/live/robohome.xyz/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/robohome.xyz/privkey.pem;
+	# ssl_certificate /etc/letsencrypt/live/robohome.xyz/fullchain.pem;
+	# ssl_certificate_key /etc/letsencrypt/live/robohome.xyz/privkey.pem;
 
 	root /var/www/robohome.xyz/public;
 
@@ -25,7 +27,7 @@ server {
 	}
 
 	location ~ \.php$ {
-     	include snippets/fastcgi-php.conf;
+		include snippets/fastcgi-php.conf;
 		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
 	}
 
@@ -33,7 +35,7 @@ server {
 		deny all;
 	}
 
-    location ~ /.well-known {
-        allow all;
-    }
+	location ~ /.well-known {
+		allow all;
+	}
 }
